--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="#comprar">Comprar</a>
             </li>
             <li>
-                <a href="https://www.google.com/" target="_blank">Suporte<img src="./src/imagens/icone-link.svg" alt="Icone de Link de suporte"></a>
+                <a href="https://www.linkedin.com/in/kaique-rocha-0bab132ab/" target="_blank">Suporte<img src="./src/imagens/icone-link.svg" alt="Icone de Link de suporte"></a>
             </li>
         </ul>
     </nav>
